fix: fix intelligent sample

--- a/intelligent-data-chart-generator/api/tsconfig.json
+++ b/intelligent-data-chart-generator/api/tsconfig.json
@@ -10,6 +10,8 @@
     "resolveJsonModule": true,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "nodenext",
   }
 }
