--- a/intelligent-data-chart-generator/package.json
+++ b/intelligent-data-chart-generator/package.json
@@ -2,8 +2,9 @@
   "name": "intelligent-data-chart-generator",
   "version": "0.1.0",
   "engines": {
-    "node": "18"
+    "node": "18 || 20"
   },
+  "type": "module",
   "private": true,
   "dependencies": {
     "@fluentui/react": "^8.114.2",
@@ -17,7 +18,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "^5.0.1",
     "recharts": "^2.10.4"
   },
   "devDependencies": {
@@ -25,16 +25,19 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^5.4.10"
   },
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
