--- a/intelligent-data-chart-generator/teamsapp.yml
+++ b/intelligent-data-chart-generator/teamsapp.yml
@@ -89,17 +89,17 @@ deploy:
   - uses: cli/runNpmCommand
     env:
       TEAMS_APP_ID: ${{TEAMS_APP_ID}}
-      REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
-      REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
-      REACT_APP_FUNC_NAME: callService
-      REACT_APP_FUNC_ENDPOINT: ${{API_FUNCTION_ENDPOINT}}
+      VITE_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
+      VITE_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
+      VITE_APP_FUNC_NAME: callService
+      VITE_APP_FUNC_ENDPOINT: ${{API_FUNCTION_ENDPOINT}}
     with:
       args: run build --if-present
   # Deploy bits to Azure Static Web Apps
   - uses: cli/runNpxCommand
     name: deploy to Azure Static Web Apps
     with:
-      args: '@azure/static-web-apps-cli deploy ./build -d
+      args: '@azure/static-web-apps-cli deploy ./dist -d
         ${{SECRET_TAB_SWA_DEPLOYMENT_TOKEN}} --env production'
   # Run npm command
   - uses: cli/runNpmCommand
@@ -151,3 +151,4 @@ publish:
     # the specified environment variable(s).
     writeToEnvironmentFile:
       publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
+projectId: 714c697e-48c0-44dd-9c18-a66431167135
