--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit Adaptive Card Notification Bot Sample",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20"
   },
   "author": "Microsoft",
   "license": "MIT",
@@ -25,9 +25,9 @@
     "@azure/storage-blob": "^12.9.0",
     "@azure/identity": "^4.4.0",
     "adaptivecards-templating": "^2.3.1",
-    "adaptive-expressions": "^4.22.3",
-    "@microsoft/teamsfx": "^2.0.0",
-    "botbuilder": "^4.18.0"
+    "adaptive-expressions": "^4.23.1",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "botbuilder": "^4.23.1"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
