--- a/bot-sso/package.json
+++ b/bot-sso/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit sso bot sample",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20"
   },
   "author": "Microsoft",
   "license": "MIT",
@@ -22,20 +22,21 @@
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^3.0.1",
-    "@microsoft/teamsfx": "^2.0.0",
-    "botbuilder": "^4.18.0",
-    "botbuilder-dialogs": "^4.18.0",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "botbuilder": "^4.23.1",
+    "botbuilder-dialogs": "^4.23.1",
     "isomorphic-fetch": "^3.0.0",
-    "restify": "^10.0.0",
-    "uuid": "^8.3.2"
+    "express": "^5.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/restify": "8.5.5",
+    "@types/express": "^5.0.0",
     "@types/node": "^18.0.0",
+    "@types/json-schema": "^7.0.15",
     "env-cmd": "^10.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^5.3.0",
-    "nodemon": "^2.0.7",
+    "nodemon": "^3.1.7",
     "shx": "^0.3.3"
   }
 }
