--- a/command-bot-with-sso/package.json
+++ b/command-bot-with-sso/package.json
@@ -5,7 +5,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20"
   },
   "main": "./lib/index.js",
   "scripts": {
@@ -21,20 +21,23 @@
     "url": "https://github.com"
   },
   "dependencies": {
-    "@microsoft/teamsfx": "^2.0.0",
-    "@microsoft/microsoft-graph-client": "^3.0.5",
-    "botbuilder": "^4.18.0",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "adaptivecards-templating": "^2.3.1",
+    "adaptive-expressions": "^4.23.1",
+    "botbuilder": "^4.23.1",
     "isomorphic-fetch": "^3.0.0",
-    "restify": "^10.0.0"
+    "express": "^5.0.1"
   },
   "devDependencies": {
-    "@types/restify": "^8.5.5",
-    "@types/node": "^14.0.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^18.0.0",
+    "@types/json-schema": "^7.0.15",
     "copyfiles": "^2.4.1",
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.7",
+    "nodemon": "^3.1.7",
     "shx": "^0.3.4",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.4.4"
+    "ts-node": "^10.4.0",
+    "typescript": "^5.3.0"
   }
 }
