--- a/NPM-search-connector-M365/package.json
+++ b/NPM-search-connector-M365/package.json
@@ -2,7 +2,7 @@
   "name": "teams-messaging-extension",
   "version": "1.0.0",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20"
   },
   "msteams": {
     "teamsAppId": null
@@ -18,11 +18,11 @@
     "watch": "nodemon ./index.js"
   },
   "dependencies": {
-    "botbuilder": "^4.18.0",
-    "restify": "^10.0.0"
+    "botbuilder": "^4.23.1",
+    "express": "^5.0.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^3.1.7"
   }
 }
