--- a/NPM-search-message-extension-codespaces/package.json
+++ b/NPM-search-message-extension-codespaces/package.json
@@ -6,7 +6,7 @@
   },
   "description": "Microsoft Teams Toolkit message extension Bot sample",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20"
   },
   "author": "Microsoft",
   "license": "MIT",
@@ -19,12 +19,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "botbuilder": "^4.18.0",
+    "botbuilder": "^4.23.1",
     "isomorphic-fetch": "^3.0.0",
-    "restify": "^10.0.0"
+    "express": "^5.0.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^3.1.7"
   }
 }
