--- a/hello-world-bot-with-tab/tab/package.json
+++ b/hello-world-bot-with-tab/tab/package.json
@@ -2,21 +2,21 @@
   "name": "hello-world-tab",
   "version": "0.1.0",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20"
   },
   "private": true,
   "dependencies": {
-    "@fluentui/react-components": "^9.18.0",
+    "@fluentui/react-components": "^9.55.1",
     "@microsoft/teams-js": "^2.22.0",
-    "@microsoft/teamsfx": "^2.2.0",
-    "@microsoft/teamsfx-react": "^3.0.0",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "@microsoft/teamsfx-react": "^4.0.0-alpha",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.0",
+    "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
