--- a/notification-codespaces/package.json
+++ b/notification-codespaces/package.json
@@ -1,9 +1,9 @@
 {
     "name": "notification-app",
     "version": "1.0.0",
-    "description": "Microsoft Teams Toolkit Notification Bot Sample (Restify)",
+    "description": "Microsoft Teams Toolkit Notification Bot Sample (Express)",
     "engines": {
-        "node": "16 || 18"
+        "node": "18 || 20"
     },
     "author": "Microsoft",
     "license": "MIT",
@@ -21,10 +21,10 @@
     },
     "dependencies": {
         "adaptivecards-templating": "^2.3.1",
-        "adaptive-expressions": "^4.22.3",
-        "@microsoft/teamsfx": "^2.2.0",
-        "botbuilder": "^4.18.0",
-        "restify": "^10.0.0"
+        "adaptive-expressions": "^4.23.1",
+        "@microsoft/teamsfx": "^3.0.0-alpha",
+        "botbuilder": "^4.23.1",
+        "express": "^5.0.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.7",
