--- a/hello-world-teams-tab-and-outlook-add-in/tab/package.json
+++ b/hello-world-teams-tab-and-outlook-add-in/tab/package.json
@@ -2,15 +2,15 @@
   "name": "contoso-tab",
   "version": "0.1.0",
   "engines": {
-    "node": ">=14 <=16"
+    "node": "18 || 20"
   },
   "type": "module",
   "private": true,
   "dependencies": {
     "@fluentui/react-components": "^9.18.0",
     "@microsoft/teams-js": "^2.22.0",
-    "@microsoft/teamsfx": "^2.2.0",
-    "@microsoft/teamsfx-react": "^3.0.0",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "@microsoft/teamsfx-react": "^4.0.0-alpha",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
