--- a/intelligent-data-chart-generator/package.json
+++ b/intelligent-data-chart-generator/package.json
@@ -11,8 +11,8 @@
     "@fluentui/react-components": "^9.44.2",
     "@fluentui/react-icons": "^2.0.224",
     "@microsoft/teams-js": "^2.22.0",
-    "@microsoft/teamsfx": "^2.3.0",
-    "@microsoft/teamsfx-react": "^3.1.0",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "@microsoft/teamsfx-react": "^4.0.0-alpha",
     "axios": "^1.6.5",
     "highlight.js": "^11.9.0",
     "react": "^18.2.0",
