--- a/team-central-dashboard/api/package.json
+++ b/team-central-dashboard/api/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@azure/functions": "^4.2.0",
-    "@microsoft/teamsfx": "^2.2.0",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
     "@microsoft/microsoft-graph-client": "^3.0.5",
     "isomorphic-fetch": "^3.0.0"
   },
