--- a/team-central-dashboard/package.json
+++ b/team-central-dashboard/package.json
@@ -2,19 +2,19 @@
   "name": "team-central-dashboard",
   "version": "0.1.0",
   "engines": {
-    "node": "18"
+    "node": "18 || 20"
   },
   "type": "module",
   "private": true,
   "dependencies": {
     "@fluentui/react": "^8.107.1",
     "@fluentui/react-charting": "^5.14.10",
-    "@fluentui/react-components": "^9.18.0",
+    "@fluentui/react-components": "^9.55.1",
     "@fluentui/react-icons": "^2.0.186",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teams-js": "^2.22.0",
-    "@microsoft/teamsfx": "2.3.0",
-    "@microsoft/teamsfx-react": "3.1.0",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "@microsoft/teamsfx-react": "^4.0.0-alpha",
     "axios": "^0.21.1",
     "moment-timezone": "^0.5.39",
     "react": "^18.2.0",
