--- a/templates/dashboard-tab-ts/.vscode/tasks.json
+++ b/templates/dashboard-tab-ts/.vscode/tasks.json
@@ -75,7 +75,7 @@
                 "background": {
                     "activeOnStart": true,
                     "beginsPattern": ".*",
-                    "endsPattern": "Compiled|Failed|compiled|failed"
+                    "endsPattern": "Compiled|Failed|compiled|failed|ready"
                 }
             }
         }
