--- a/templates/default-bot-js/package.json
+++ b/templates/default-bot-js/package.json
@@ -1,31 +1,31 @@
 {
-    "name": "defaultbotjs",
-    "version": "1.0.0",
-    "msteams": {
-      "teamsAppId": null
-    },
-    "description": "Microsoft Teams Toolkit hello world Bot sample",
-    "engines": {
-        "node": "16 || 18"
-    },
-    "author": "Microsoft",
-    "license": "MIT",
-    "main": "index.js",
-    "scripts": {
-        "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
-        "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.testTool npm run dev",
-        "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.testtool teamsapptester start",
-        "dev": "nodemon --inspect=9239 --signal SIGINT ./index.js",
-        "start": "node ./index.js",
-        "watch": "nodemon ./index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "dependencies": {
-        "botbuilder": "^4.20.0",
-        "restify": "^10.0.0"
-    },
-    "devDependencies": {
-        "env-cmd": "^10.1.0",
-        "nodemon": "^2.0.7"
-    }
+  "name": "defaultbotjs",
+  "version": "1.0.0",
+  "msteams": {
+    "teamsAppId": null
+  },
+  "description": "Microsoft Teams Toolkit hello world Bot sample",
+  "engines": {
+    "node": "18 || 20"
+  },
+  "author": "Microsoft",
+  "license": "MIT",
+  "main": "index.js",
+  "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
+    "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.testTool npm run dev",
+    "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.testtool teamsapptester start",
+    "dev": "nodemon --inspect=9239 --signal SIGINT ./index.js",
+    "start": "node ./index.js",
+    "watch": "nodemon ./index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "botbuilder": "^4.23.1",
+    "express": "^5.0.1"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "nodemon": "^3.1.7"
+  }
 }
