--- a/templates/notification-restify-js/package.json
+++ b/templates/notification-restify-js/package.json
@@ -1,34 +1,35 @@
 {
-    "name": "notificationrestifyjs",
-    "version": "1.0.0",
-    "description": "Microsoft Teams Toolkit Notification Bot Sample (Restify)",
-    "engines": {
-        "node": "16 || 18"
-    },
-    "author": "Microsoft",
-    "license": "MIT",
-    "main": "./src/index.js",
-    "scripts": {
-        "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
-        "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.testTool npm run dev",
-        "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.testtool teamsapptester start",
-        "dev": "nodemon --inspect=9239 --signal SIGINT ./src/index.js",
-        "start": "node ./src/index.js",
-        "watch": "nodemon ./src/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com"
-    },
-    "dependencies": {
-        "@microsoft/adaptivecards-tools": "^1.0.0",
-        "@microsoft/teamsfx": "^2.3.1",
-        "botbuilder": "^4.20.0",
-        "restify": "^10.0.0"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.7",
-        "env-cmd": "^10.1.0"
-    }
+  "name": "notificationrestifyjs",
+  "version": "1.0.0",
+  "description": "Microsoft Teams Toolkit Notification Bot Sample (Express)",
+  "engines": {
+    "node": "18 || 20"
+  },
+  "author": "Microsoft",
+  "license": "MIT",
+  "main": "./src/index.js",
+  "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
+    "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.testTool npm run dev",
+    "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.testtool teamsapptester start",
+    "dev": "nodemon --inspect=9239 --signal SIGINT ./src/index.js",
+    "start": "node ./src/index.js",
+    "watch": "nodemon ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com"
+  },
+  "dependencies": {
+    "adaptivecards-templating": "^2.3.1",
+    "adaptive-expressions": "^4.23.1",
+    "@microsoft/teamsfx": "^3.0.0-alpha",
+    "botbuilder": "^4.23.1",
+    "express": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7",
+    "env-cmd": "^10.1.0"
+  }
 }
