--- a/large-scale-notification/env/.env.dev
+++ b/large-scale-notification/env/.env.dev
@@ -15,10 +15,11 @@ BOT_AZURE_FUNCTION_APP_RESOURCE_ID=
 BOT_DOMAIN=
 BOT_FUNCTION_ENDPOINT=
 TEAMS_APP_TENANT_ID=
-SERVICE_BUS_ENDPOINT=
 SERVICE_BUS_QUEUE_NAME=
 STORAGE_ACCOUNT_NAME=
-STORAGE_ACCOUNT_URL=
 INSTALLATION_TABLE_NAME=
 INSTALLATION_MOCK_TABLE_NAME=
 TEAMS_APP_PUBLISHED_APP_ID=
+SERVICE_BUS_NAMESPACE=
+MANAGED_IDENTITY_ID=
+BOT_TENANT_ID=
