update outlook sample to wxpo

--- a/hello-world-teams-tab-and-outlook-add-in/.vscode/tasks.json
+++ b/hello-world-teams-tab-and-outlook-add-in/.vscode/tasks.json
@@ -117,20 +117,68 @@
             }
         },
         {
-            "label": "Debug: Outlook Desktop",
+            "label": "Debug: Excel Desktop",
             "type": "npm",
-            "script": "start:desktop -- --app outlook",
+            "script": "start:desktop:excel",
             "options": {
                 "cwd": "${workspaceFolder}/add-in/"
             },
-            "dependsOn": [
-                "Install"
-            ],
             "presentation": {
                 "clear": true,
-                "panel": "dedicated",
+                "panel": "dedicated"
             },
-            "problemMatcher": []
+            "problemMatcher": [],
+            "dependsOn": [
+                "Install"
+            ]
+        },
+        {
+            "label": "Debug: Outlook Desktop",
+            "type": "npm",
+            "script": "start:desktop:outlook",
+            "options": {
+                "cwd": "${workspaceFolder}/add-in/"
+            },
+            "presentation": {
+                "clear": true,
+                "panel": "dedicated"
+            },
+            "problemMatcher": [],
+            "dependsOn": [
+                "Install"
+            ]
+        },
+        {
+            "label": "Debug: PowerPoint Desktop",
+            "type": "npm",
+            "script": "start:desktop:powerpoint",
+            "options": {
+                "cwd": "${workspaceFolder}/add-in/"
+            },
+            "presentation": {
+                "clear": true,
+                "panel": "dedicated"
+            },
+            "problemMatcher": [],
+            "dependsOn": [
+                "Install"
+            ]
+        },
+        {
+            "label": "Debug: Word Desktop",
+            "type": "npm",
+            "script": "start:desktop:word",
+            "options": {
+                "cwd": "${workspaceFolder}/add-in/"
+            },
+            "presentation": {
+                "clear": true,
+                "panel": "dedicated"
+            },
+            "problemMatcher": [],
+            "dependsOn": [
+                "Install"
+            ]
         },
         {
             "label": "Dev Server",
@@ -212,7 +260,7 @@
             "label": "Start Add-in Locally",
             "dependsOn": [
                 "Create resources",
-                "Debug: Outlook Desktop"
+                "Debug: Excel Desktop"
             ],
             "dependsOrder": "sequence"
         },
