--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -391,17 +391,18 @@
             "suggested": false
         },
         {
-            "id": "hello-world-teams-tab-and-outlook-add-in",
-            "shortId": "helloworld-outlook",
+            "id": "hello-world-teams-tab-and-office-add-in",
+            "shortId": "helloworld-office",
             "onboardDate": "2023-03-02",
-            "title": "Hello World Teams Tab and Outlook add-in",
-            "shortDescription": "A hello world project that contains both Teams Tab and Outlook add-in capability",
-            "fullDescription": "Microsoft Teams supports the ability to run web-based UI inside \"custom tabs\" that users can install either for just themselves (personal tabs) or within a team or group chat context. Outlook add-ins are integrations built by third parties into Outlook by using our web-based platform. Now you have the ability to create a single unit of distribution for all your Microsoft 365 extensions by using the same manifest format and schema, based on the current JSON-formatted Teams manifest.",
+            "title": "Hello World Teams Tab and Office add-in",
+            "shortDescription": "A hello world project that contains both Teams Tab and Office add-in capability",
+            "fullDescription": "Microsoft Teams supports the ability to run web-based UI inside \"custom tabs\" that users can install either for just themselves (personal tabs) or within a team or group chat context. Office add-ins are integrations built by third parties into Office by using our web-based platform. Now you have the ability to create a single unit of distribution for all your Microsoft 365 extensions by using the same manifest format and schema, based on the current JSON-formatted Teams manifest.",
             "types": [
                 "Tab"
             ],
             "tags": [
                 "Tab",
+                "Office Add-in",
                 "Outlook Add-in"
             ],
             "time": "5min to run",
