--- a/hello-world-teams-tab-and-outlook-add-in/add-in/package.json
+++ b/hello-world-teams-tab-and-outlook-add-in/add-in/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "config": {
-    "app_to_debug": "outlook",
+    "app_to_debug": "excel",
     "app_type_to_debug": "desktop",
     "dev_server_port": 53000
   },
@@ -17,49 +17,53 @@
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
-    "login": "office-addin-dev-settings m365-account login",
-    "logout": "office-addin-dev-settings m365-account logout",
     "prettier": "office-addin-lint prettier",
+    "signin": "office-addin-dev-settings m365-account login",
+    "signout": "office-addin-dev-settings m365-account logout",
     "start": "office-addin-debugging start ../appPackage/build/appPackage.local.zip",
     "start:desktop": "office-addin-debugging start ../appPackage/build/appPackage.local.zip desktop",
+    "start:desktop:word": "office-addin-debugging start ../appPackage/build/appPackage.local.zip --app word",
+    "start:desktop:excel": "office-addin-debugging start ../appPackage/build/appPackage.local.zip --app excel",
+    "start:desktop:powerpoint": "office-addin-debugging start ../appPackage/build/appPackage.local.zip --app powerpoint",
+    "start:desktop:outlook": "office-addin-debugging start ../appPackage/build/appPackage.local.zip --app outlook",
     "start:web": "office-addin-debugging start ../appPackage/build/appPackage.local.zip web",
     "stop": "office-addin-debugging stop ../appPackage/build/manifest.local.json",
     "validate": "office-addin-manifest validate ../appPackage/build/manifest.local.json",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "core-js": "^3.9.1",
+    "core-js": "^3.36.0",
     "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/office-js": "^1.0.256",
-    "@types/office-runtime": "^1.0.23",
-    "acorn": "^8.5.0",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.1",
-    "eslint-plugin-office-addins": "^2.1.4",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/office-js": "^1.0.377",
+    "@types/office-runtime": "^1.0.35",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
+    "eslint-plugin-office-addins": "^3.0.2",
     "file-loader": "^6.2.0",
-    "html-loader": "^4.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "office-addin-cli": "^1.5.4",
-    "office-addin-debugging": "^5.0.2",
-    "office-addin-dev-certs": "^1.11.3",
-    "office-addin-lint": "^2.2.4",
-    "office-addin-manifest": "^1.12.1",
-    "office-addin-prettier-config": "^1.2.0",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "office-addin-cli": "^1.6.3",
+    "office-addin-debugging": "^5.1.4",
+    "office-addin-dev-certs": "^1.13.3",
+    "office-addin-lint": "^2.3.3",
+    "office-addin-manifest": "^1.13.4",
+    "office-addin-prettier-config": "^1.2.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
-    "source-map-loader": "^3.0.0",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.3.5",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "4.7.4"
+    "source-map-loader": "^5.0.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.2",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "5.0.3"
   },
   "prettier": "office-addin-prettier-config",
   "browserslist": [
+    "last 2 versions",
     "ie 11"
   ]
 }
