--- a/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
+++ b/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
@@ -3,7 +3,6 @@
     "manifestVersion": "devPreview",
     "version": "1.0.0",
     "id": "${{TEAMS_APP_ID}}",
-    "packageName": "com.microsoft.teams.extension",
     "developer": {
         "name": "Contoso App, Inc.",
         "websiteUrl": "${{TAB_ENDPOINT}}",
@@ -56,6 +55,10 @@
                 {
                     "name": "MailboxItem.Read.User",
                     "type": "Delegated"
+                },
+                {
+                    "name": "Document.ReadWrite.User",
+                    "type": "Delegated"
                 }
             ]
         }
@@ -68,13 +71,10 @@
         {
             "requirements": {
                 "scopes": [
-                    "mail"
-                ],
-                "capabilities": [
-                    {
-                        "name": "Mailbox",
-                        "minVersion": "1.3"
-                    }
+                    "mail",
+                    "workbook",
+                    "document",
+                    "presentation"
                 ]
             },
             "runtimes": [
@@ -87,6 +87,22 @@
                             }
                         ]
                     },
+                    "id": "TaskPaneRuntimeMail",
+                    "type": "general",
+                    "code": {
+                        "page": "https://localhost:53000/taskpane.html"
+                    },
+                    "lifetime": "short",
+                    "actions": [
+                        {
+                            "id": "TaskPaneRuntimeShowMail",
+                            "type": "openPage",
+                            "pinnable": false,
+                            "view": "dashboard"
+                        }
+                    ]
+                },
+                {
                     "id": "TaskPaneRuntime",
                     "type": "general",
                     "code": {
@@ -103,6 +119,14 @@
                     ]
                 },
                 {
+                    "requirements": {
+                        "capabilities": [
+                            {
+                                "name": "AddinCommands",
+                                "minVersion": "1.1"
+                            }
+                        ]
+                    },
                     "id": "CommandsRuntime",
                     "type": "general",
                     "code": {
@@ -113,20 +137,107 @@
                     "actions": [
                         {
                             "id": "action",
-                            "type": "executeFunction",
-                            "displayName": "action"
+                            "type": "executeFunction"
                         }
                     ]
                 }
             ],
             "ribbons": [
                 {
+                    "requirements": {
+                        "capabilities": [
+                            {
+                                "name": "Mailbox",
+                                "minVersion": "1.3"
+                            }
+                        ]
+                    },
                     "contexts": [
                         "mailRead"
                     ],
                     "tabs": [
                         {
                             "builtInTabId": "TabDefault",
+                            "groups": [
+                                {
+                                    "id": "msgReadGroup",
+                                    "label": "Contoso Add-in",
+                                    "icons": [
+                                        {
+                                            "size": 16,
+                                            "url": "https://localhost:53000/assets/icon-16.png"
+                                        },
+                                        {
+                                            "size": 32,
+                                            "url": "https://localhost:53000/assets/icon-32.png"
+                                        },
+                                        {
+                                            "size": 80,
+                                            "url": "https://localhost:53000/assets/icon-80.png"
+                                        }
+                                    ],
+                                    "controls": [
+                                        {
+                                            "id": "msgReadOpenPaneButton",
+                                            "type": "button",
+                                            "label": "Show Taskpane",
+                                            "icons": [
+                                                {
+                                                    "size": 16,
+                                                    "url": "https://localhost:53000/assets/icon-16.png"
+                                                },
+                                                {
+                                                    "size": 32,
+                                                    "url": "https://localhost:53000/assets/icon-32.png"
+                                                },
+                                                {
+                                                    "size": 80,
+                                                    "url": "https://localhost:53000/assets/icon-80.png"
+                                                }
+                                            ],
+                                            "supertip": {
+                                                "title": "Show Taskpane",
+                                                "description": "Opens a pane displaying all available properties."
+                                            },
+                                            "actionId": "TaskPaneRuntimeShowMail"
+                                        },
+                                        {
+                                            "id": "ActionButton",
+                                            "type": "button",
+                                            "label": "Perform an action",
+                                            "icons": [
+                                                {
+                                                    "size": 16,
+                                                    "url": "https://localhost:53000/assets/icon-16.png"
+                                                },
+                                                {
+                                                    "size": 32,
+                                                    "url": "https://localhost:53000/assets/icon-32.png"
+                                                },
+                                                {
+                                                    "size": 80,
+                                                    "url": "https://localhost:53000/assets/icon-80.png"
+                                                }
+                                            ],
+                                            "supertip": {
+                                                "title": "Perform an action",
+                                                "description": "Perform an action when clicked."
+                                            },
+                                            "actionId": "action"
+                                        }
+                                    ]
+                                }
+                            ]
+                        }
+                    ]
+                },
+                {
+                    "contexts": [
+                        "default"
+                    ],
+                    "tabs": [
+                        {
+                            "builtInTabId": "TabHome",
                             "groups": [
                                 {
                                     "id": "msgReadGroup",
