--- a/hello-world-teams-tab-and-outlook-add-in/.vscode/launch.json
+++ b/hello-world-teams-tab-and-outlook-add-in/.vscode/launch.json
@@ -2,43 +2,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug in Word Desktop (Edge Chromium)",
-            "type": "msedge",
-            "request": "attach",
-            "port": 9229,
-            "timeout": 600000,
-            "webRoot": "${workspaceRoot}/add-in/",
-            "preLaunchTask": "Start Word Add-in Locally",
-            "postDebugTask": "Stop Debug"
-        },
-        {
-            "name": "Debug in Excel Desktop (Edge Chromium)",
-            "type": "msedge",
-            "request": "attach",
-            "port": 9229,
-            "timeout": 600000,
-            "webRoot": "${workspaceRoot}/add-in/",
-            "preLaunchTask": "Start Excel Add-in Locally",
-            "postDebugTask": "Stop Debug"
-        },
-        {
-            "name": "Debug in PowerPoint Desktop (Edge Chromium)",
-            "type": "msedge",
-            "request": "attach",
-            "port": 9229,
-            "timeout": 600000,
-            "webRoot": "${workspaceRoot}/add-in/",
-            "preLaunchTask": "Start PowerPoint Add-in Locally",
-            "postDebugTask": "Stop Debug"
-        },
-        {
             "name": "Debug in Outlook Desktop (Edge Chromium)",
             "type": "msedge",
             "request": "attach",
             "port": 9229,
             "timeout": 600000,
             "webRoot": "${workspaceRoot}/add-in/",
-            "preLaunchTask": "Start Outlook Add-in Locally",
+            "preLaunchTask": "Start Add-in Locally",
             "postDebugTask": "Stop Debug"
         },
         {
