Updating name in teamsapp yaml

--- a/templates/user-assigned-managed-identity-python/teamsapp.yml
+++ b/templates/user-assigned-managed-identity-python/teamsapp.yml
@@ -11,7 +11,7 @@ provision:
   - uses: teamsApp/create
     with:
       # Teams app name
-      name: default-bot-js${{APP_NAME_SUFFIX}}
+      name: echo-bot-msi-${{APP_NAME_SUFFIX}}
     # Write the information of created resources into environment file for
     # the specified environment variable(s).
     writeToEnvironmentFile:
