--- a/notification-codespaces/package.json
+++ b/notification-codespaces/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "notification-app",
+    "name": "dmjv2",
     "version": "1.0.0",
     "description": "Microsoft Teams Toolkit Notification Bot Sample (Express)",
     "engines": {
