--- a/notification-codespaces/appPackage/manifest.json
+++ b/notification-codespaces/appPackage/manifest.json
@@ -4,24 +4,24 @@
     "version": "1.0.0",
     "id": "${{TEAMS_APP_ID}}",
     "developer": {
-        "name": "Teams App, Inc.",
-        "websiteUrl": "https://www.example.com",
-        "privacyUrl": "https://www.example.com/privacy",
-        "termsOfUseUrl": "https://www.example.com/termofuse"
+        "name": "Alexander Gobeil",
+        "websiteUrl": "https://44.is-a.dev/",
+        "privacyUrl": "https://44.is-a.dev/",
+        "termsOfUseUrl": "https://44.is-a.dev/"
     },
     "icons": {
         "color": "color.png",
         "outline": "outline.png"
     },
     "name": {
-        "short": "notification-app${{APP_NAME_SUFFIX}}",
-        "full": "Full name for notification-app"
+        "short": "DMJv2",
+        "full": "Do My Job Version 2.0"
     },
     "description": {
-        "short": "Short description of notification-app",
-        "full": "Full description of notification-app"
+        "short": "Teams interface application for DMJ",
+        "full": "Teams interface application for Do My Job"
     },
-    "accentColor": "#FFFFFF",
+    "accentColor": "#00FFFF",
     "bots": [
         {
             "botId": "${{BOT_ID}}",
