--- a/notification-codespaces/env/.env.dev
+++ b/notification-codespaces/env/.env.dev
@@ -1,8 +1,8 @@
 # This file includes environment variables that will be committed to git by default.
 
 # Built-in environment variables
-TEAMSFX_ENV=dev
-APP_NAME_SUFFIX=dev
+TEAMSFX_ENV=-dev
+APP_NAME_SUFFIX=-dev
 
 # Updating AZURE_SUBSCRIPTION_ID or AZURE_RESOURCE_GROUP_NAME after provision may also require an update to RESOURCE_SUFFIX, because some services require a globally unique name across subscriptions/resource groups.
 AZURE_SUBSCRIPTION_ID=
@@ -10,7 +10,7 @@ AZURE_RESOURCE_GROUP_NAME=
 RESOURCE_SUFFIX=
 
 # Generated during provision, you can also add your own variables.
-BOT_ID=
-TEAMS_APP_ID=
+BOT_ID=cf356536-d196-4554-a8b7-0a8b018ac474
+TEAMS_APP_ID=b7c4744f-1921-4fee-9126-b394cdaece8e
 BOT_AZURE_APP_SERVICE_RESOURCE_ID=
 BOT_DOMAIN=
