--- a/notification-codespaces/env/.env.local
+++ b/notification-codespaces/env/.env.local
@@ -2,9 +2,10 @@
 
 # Built-in environment variables
 TEAMSFX_ENV=local
-APP_NAME_SUFFIX=local
+APP_NAME_SUFFIX=-local
 # Generated during provision, you can also add your own variables.
-BOT_ID=
-TEAMS_APP_ID=
+BOT_ID=cf356536-d196-4554-a8b7-0a8b018ac474
+TEAMS_APP_ID=b7c4744f-1921-4fee-9126-b394cdaece8e
 BOT_DOMAIN=
 BOT_ENDPOINT=
+TEAMS_APP_TENANT_ID=b18d9f6f-0743-460d-a19b-0b3297eeeb89
