feat: update supported node versions

--- a/NPM-search-connector-M365/package.json
+++ b/NPM-search-connector-M365/package.json
@@ -2,7 +2,7 @@
   "name": "teams-messaging-extension",
   "version": "1.0.0",
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "msteams": {
     "teamsAppId": null
