--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit Adaptive Card Notification Bot Sample",
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "author": "Microsoft",
   "license": "MIT",
