--- a/templates/dashboard-tab-ts/package.json
+++ b/templates/dashboard-tab-ts/package.json
@@ -2,7 +2,7 @@
   "name": "dashboardtabts",
   "version": "0.1.0",
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "type": "module",
   "private": true,
