--- a/command-bot-with-sso/package.json
+++ b/command-bot-with-sso/package.json
@@ -5,7 +5,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "main": "./lib/index.js",
   "scripts": {
