--- a/hello-world-bot-with-tab/package.json
+++ b/hello-world-bot-with-tab/package.json
@@ -4,7 +4,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
