--- a/templates/non-sso-tab-js/package.json
+++ b/templates/non-sso-tab-js/package.json
@@ -2,7 +2,7 @@
   "name": "nonssotabjs",
   "version": "0.1.0",
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "private": true,
   "dependencies": {
