--- a/templates/sso-tab-with-obo-flow-ts/package.json
+++ b/templates/sso-tab-with-obo-flow-ts/package.json
@@ -2,7 +2,7 @@
   "name": "ssotabwithoboflowts",
   "version": "0.1.0",
   "engines": {
-    "node": "18 || 20"
+    "node": "18 || 20 || 22"
   },
   "private": true,
   "dependencies": {
