--- a/hello-world-in-meeting/package.json
+++ b/hello-world-in-meeting/package.json
@@ -2,7 +2,7 @@
   "name": "hello-world-in-meeting",
   "version": "0.1.0",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20 || 22"
   },
   "private": true,
   "dependencies": {
