--- a/hello-world-tab-with-backend/package.json
+++ b/hello-world-tab-with-backend/package.json
@@ -2,7 +2,7 @@
   "name": "teamsfx-template-tab",
   "version": "0.1.0",
   "engines": {
-    "node": "18"
+    "node": "18 || 20 || 22"
   },
   "private": true,
   "dependencies": {
