--- a/sso-enabled-tab-via-apim-proxy/package.json
+++ b/sso-enabled-tab-via-apim-proxy/package.json
@@ -2,7 +2,7 @@
   "name": "sso-enabled-tab-via-apim-proxy",
   "version": "0.1.0",
   "engines": {
-    "node": "16 || 18"
+    "node": "18 || 20 || 22"
   },
   "private": true,
   "dependencies": {
