--- a/stocks-update-notification-bot/package.json
+++ b/stocks-update-notification-bot/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Stocks Update Notification bot",
     "engines": {
-        "node": "16 || 18"
+        "node": "18 || 20 || 22"
     },
     "author": "Microsoft",
     "license": "MIT",
