--- a/templates/custom-copilot-assistant-new/.vscode/launch.json
+++ b/templates/custom-copilot-assistant-new/.vscode/launch.json
@@ -65,7 +65,7 @@
         "console": "integratedTerminal"
       },
       {
-          "name": "Start Test Tool",
+          "name": "Start Microsoft 365 Agents playground",
           "type": "node",
           "request": "launch",
           "program": "${workspaceFolder}/devTools/teamsapptester/node_modules/@microsoft/teams-app-test-tool/cli.js",
@@ -111,15 +111,15 @@
         "stopAll": true
       },
       {
-          "name": "Debug in Test Tool",
+          "name": "Debug in Microsoft 365 Agents playground",
           "configurations": [
               "Start Python",
-              "Start Test Tool"
+              "Start Microsoft 365 Agents playground"
           ],
           "cascadeTerminateToConfigurations": [
-              "Start Test Tool"
+              "Start Microsoft 365 Agents playground"
           ],
-          "preLaunchTask": "Deploy (Test Tool)",
+          "preLaunchTask": "Deploy (Microsoft 365 Agents playground)",
           "presentation": {
               "group": "2-local",
               "order": 1
