--- a/templates/custom-copilot-basic-python/.vscode/tasks.json
+++ b/templates/custom-copilot-basic-python/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             // Check all required prerequisites.
             // See https://aka.ms/teamsfx-tasks/check-prerequisites to know the details and how to customize the args.
-            "label": "Validate prerequisites (Test Tool)",
+            "label": "Validate prerequisites (Microsoft 365 Agents playground)",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
             "args": {
@@ -17,16 +17,16 @@
                 ],
                 "portOccupancy": [
                     3978, // app service port
-                    56150, // test tool port
+                    56150, // Microsoft 365 Agents playground port
                 ]
             }
         },
         {
             // Build project.
             // See https://aka.ms/teamsfx-tasks/deploy to know the details and how to customize the args.
-            "label": "Deploy (Test Tool)",
+            "label": "Deploy (Microsoft 365 Agents playground)",
             "dependsOn": [
-                "Validate prerequisites (Test Tool)"
+                "Validate prerequisites (Microsoft 365 Agents playground)"
             ],
             "type": "teamsfx",
             "command": "deploy",
