--- a/templates/message-extension-action-js/env/.env.testtool
+++ b/templates/message-extension-action-js/env/.env.testtool
@@ -3,6 +3,6 @@
 # Built-in environment variables
 TEAMSFX_ENV=testtool
 
-# Environment variables used by test tool
+# Environment variables used by Microsoft 365 Agents playground
 TEAMSAPPTESTER_PORT=56150
 TEAMSFX_NOTIFICATION_STORE_FILENAME=.notification.testtoolstore.json
