fix: update Microsoft 365 Agents Toolkit

--- a/templates/command-and-response-js/package.json
+++ b/templates/command-and-response-js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "commandandresponsejs",
   "version": "1.0.0",
-  "description": "Microsoft Microsoft 365 Agents Toolkit Command and Response Bot Sample",
+  "description": "Microsoft 365 Agents Toolkit Command and Response Bot Sample",
   "engines": {
     "node": "18 || 20 || 22"
   },
