--- a/templates/copilot-rag-m365/package.json
+++ b/templates/copilot-rag-m365/package.json
@@ -4,7 +4,7 @@
   "msteams": {
     "teamsAppId": null
   },
-  "description": "Microsoft Microsoft 365 Agents Toolkit RAG Bot Sample with Graph API and Teams AI Library",
+  "description": "Microsoft 365 Agents Toolkit RAG Bot Sample with Graph API and Teams AI Library",
   "engines": {
     "node": "18 || 20 || 22"
   },
