--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adaptive-card-notifi",
   "version": "1.0.0",
-  "description": "Microsoft Microsoft 365 Agents Toolkit Adaptive Card Notification Bot Sample",
+  "description": "Microsoft 365 Agents Toolkit Adaptive Card Notification Bot Sample",
   "engines": {
     "node": "18 || 20 || 22"
   },
