--- a/bot-sso-docker/package.json
+++ b/bot-sso-docker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sso-bot-sample",
   "version": "1.0.0",
-  "description": "Microsoft Microsoft 365 Agents Toolkit sso bot sample",
+  "description": "Microsoft 365 Agents Toolkit sso bot sample",
   "engines": {
     "node": "18 || 20 || 22"
   },
