--- a/copilot-connector-bot/package.json
+++ b/copilot-connector-bot/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graph-connector-bot",
   "version": "1.0.0",
-  "description": "Microsoft Microsoft 365 Agents Toolkit graph-connector-bot sample",
+  "description": "Microsoft 365 Agents Toolkit graph-connector-bot sample",
   "author": "Microsoft",
   "license": "MIT",
   "engines": {
