--- a/templates/notification-restify-js/package.json
+++ b/templates/notification-restify-js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notificationrestifyjs",
   "version": "1.0.0",
-  "description": "Microsoft Microsoft 365 Agents Toolkit Notification Bot Sample (Express)",
+  "description": "Microsoft 365 Agents Toolkit Notification Bot Sample (Express)",
   "engines": {
     "node": "18 || 20 || 22"
   },
