feat: update yml file name

--- a/large-scale-notification/.funcignore
+++ b/large-scale-notification/.funcignore
@@ -14,7 +14,7 @@ local.settings.json
 /node_modules/azurite
 README.md
 tsconfig.json
-teamsapp.yml
+m365agents.yml
 teamsapp.*.yml
 /env/
 /script/
