feat: update yml file name in ignore file

--- a/templates/m365-message-extension-js/.funcignore
+++ b/templates/m365-message-extension-js/.funcignore
@@ -11,7 +11,7 @@ node_modules/.bin
 node_modules/azure-functions-core-tools
 README.md
 m365agents.yml
-teamsapp.*.yml
+m365agents.*.yml
 /env/
 /appPackage/
 /infra/
