feat: rename test tool yml file

--- a/templates/copilot-rag-ai-search/.webappignore
+++ b/templates/copilot-rag-ai-search/.webappignore
@@ -9,7 +9,7 @@ __pycache__/
 README.md
 m365agents.yml
 m365agents.local.yml
-m365agents.testtool.yml
+m365agents.playground.yml
 .gitignore
 
 indexers/
