--- a/templates/message-extension-action-js/.webappignore
+++ b/templates/message-extension-action-js/.webappignore
@@ -2,7 +2,7 @@
 .fx
 .deployment
 .localConfigs
-.localConfigs.testTool
+.localConfigs.playground
 .notification.localstore.json
 .notification.testtoolstore.json
 /devTools
