--- a/templates/command-and-response-js/.appserviceIgnore
+++ b/templates/command-and-response-js/.appserviceIgnore
@@ -1,7 +1,7 @@
 .appserviceIgnore
 .fx
 .deployment
-.localConfigs.testTool
+.localConfigs.playground
 .localConfigs
 .notification.localstore.json
 .notification.testtoolstore.json
