--- a/templates/default-bot-js/.gitignore
+++ b/templates/default-bot-js/.gitignore
@@ -1,7 +1,7 @@
 # TeamsFx files
 env/.env.*.user
 env/.env.local
-.localConfigs.testTool
+.localConfigs.playground
 .localConfigs
 .notification.localstore.json
 .notification.testtoolstore.json
