--- a/templates/message-extension-action-js/.gitignore
+++ b/templates/message-extension-action-js/.gitignore
@@ -2,7 +2,7 @@
 env/.env.*.user
 env/.env.local
 .localConfigs
-.localConfigs.testTool
+.localConfigs.playground
 .notification.localstore.json
 .notification.testtoolstore.json
 /devTools
