--- a/templates/message-extension-action-js/package.json
+++ b/templates/message-extension-action-js/package.json
@@ -10,7 +10,7 @@
   "main": "./src/index.js",
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
-    "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.testTool npm run dev",
+    "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.playground npm run dev",
     "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.testtool teamsapptester start",
     "dev": "nodemon --exec node --inspect=9239 --signal SIGINT ./src/index.js",
     "start": "node ./src/index.js",
