--- a/templates/notification-restify-js/.appserviceignore
+++ b/templates/notification-restify-js/.appserviceignore
@@ -1,7 +1,7 @@
 .appserviceIgnore
 .fx
 .deployment
-.localConfigs.testTool
+.localConfigs.playground
 .localConfigs
 .notification.localstore.json
 .notification.testtoolstore.json
