--- a/templates/notification-restify-js/.gitignore
+++ b/templates/notification-restify-js/.gitignore
@@ -17,7 +17,7 @@ node_modules/
 lib/
 
 # Local data
-.localConfigs.testTool
+.localConfigs.playground
 .localConfigs
 .notification.localstore.json
 .notification.testtoolstore.json
