--- a/templates/workflow-ts/.gitignore
+++ b/templates/workflow-ts/.gitignore
@@ -17,7 +17,7 @@ node_modules/
 lib/
 
 # Local data
-.localConfigs.testTool
+.localConfigs.playground
 .localConfigs
 .notification.localstore.json
 .notification.testtoolstore.json
