--- a/test-tool-sample-app/.gitignore
+++ b/test-tool-sample-app/.gitignore
@@ -26,7 +26,7 @@ appsettings.json
 _storage_emulator
 
 # Local data
-.localConfigs.testTool
+.localConfigs.playground
 .localConfigs
 .notification.localstore.json
 .notification.testtoolstore.json
