feat: rename .notification.testtoolstore.json

--- a/templates/command-and-response-js/.appserviceIgnore
+++ b/templates/command-and-response-js/.appserviceIgnore
@@ -4,7 +4,7 @@
 .localConfigs.playground
 .localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 .vscode
 *.js.map
 *.ts.map
