--- a/templates/message-extension-action-js/.gitignore
+++ b/templates/message-extension-action-js/.gitignore
@@ -4,7 +4,7 @@ env/.env.local
 .localConfigs
 .localConfigs.playground
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 /devTools
 appPackage/build
 
