--- a/templates/message-extension-action-js/.webappignore
+++ b/templates/message-extension-action-js/.webappignore
@@ -4,7 +4,7 @@
 .localConfigs
 .localConfigs.playground
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 /devTools
 .vscode
 *.js.map
