--- a/templates/copilot-rag-m365/.webappignore
+++ b/templates/copilot-rag-m365/.webappignore
@@ -4,7 +4,7 @@
 .localConfigs.playground
 .localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 .vscode
 *.js.map
 *.ts.map
