--- a/templates/default-bot-js/.gitignore
+++ b/templates/default-bot-js/.gitignore
@@ -4,7 +4,7 @@ env/.env.local
 .localConfigs.playground
 .localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 appPackage/build
 
 # dependencies
