--- a/templates/default-bot-js/.webappignore
+++ b/templates/default-bot-js/.webappignore
@@ -4,7 +4,7 @@
 .localConfigs.playground
 .localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 .vscode
 *.js.map
 *.ts.map
