--- a/templates/message-extension-action-js/env/.env.playground
+++ b/templates/message-extension-action-js/env/.env.playground
@@ -5,4 +5,4 @@ TEAMSFX_ENV=testtool
 
 # Environment variables used by Microsoft 365 Agents playground
 TEAMSAPPTESTER_PORT=56150
-TEAMSFX_NOTIFICATION_STORE_FILENAME=.notification.testtoolstore.json
+TEAMSFX_NOTIFICATION_STORE_FILENAME=.notification.playgroundstore.json
