--- a/templates/notification-restify-js/.gitignore
+++ b/templates/notification-restify-js/.gitignore
@@ -20,7 +20,7 @@ lib/
 .localConfigs.playground
 .localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 
 # Dev tool directories
 /devTools/
