--- a/templates/workflow-ts/.appserviceignore
+++ b/templates/workflow-ts/.appserviceignore
@@ -4,7 +4,7 @@
 .localConfigs.playground
 .localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 .vscode
 *.js.map
 *.ts.map
