--- a/test-tool-sample-app/.webappignore
+++ b/test-tool-sample-app/.webappignore
@@ -4,7 +4,7 @@
 .localConfigs.playground
 .localConfigs
 .notification.localstore.json
-.notification.testtoolstore.json
+.notification.playgroundstore.json
 .vscode
 *.js.map
 *.ts.map
