--- a/templates/custom-copilot-basic-python/.vscode/tasks.json
+++ b/templates/custom-copilot-basic-python/.vscode/tasks.json
@@ -31,7 +31,7 @@
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "env": "testtool",
+                "env": "playground",
             }
         },
         {
