--- a/templates/default-bot-js/env/.env.playground
+++ b/templates/default-bot-js/env/.env.playground
@@ -1,7 +1,7 @@
 # This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
 
 # Built-in environment variables
-TEAMSFX_ENV=testtool
+TEAMSFX_ENV=playground
 
 # Environment variables used by Microsoft 365 Agents playground
 TEAMSAPPTESTER_PORT=56150
