--- a/templates/message-extension-action-js/package.json
+++ b/templates/message-extension-action-js/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
     "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.playground npm run dev",
-    "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.testtool teamsapptester start",
+    "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.playground teamsapptester start",
     "dev": "nodemon --exec node --inspect=9239 --signal SIGINT ./src/index.js",
     "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
