--- a/templates/notification-restify-js/.vscode/tasks.json
+++ b/templates/notification-restify-js/.vscode/tasks.json
@@ -39,7 +39,7 @@
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "env": "testtool",
+                "env": "playground",
             }
         },
         {
