--- a/templates/notification-restify-js/package.json
+++ b/templates/notification-restify-js/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
     "dev:teamsfx:testtool": "env-cmd --silent -f .localConfigs.playground npm run dev",
-    "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.testtool teamsapptester start",
+    "dev:teamsfx:launch-testtool": "env-cmd --silent -f env/.env.playground teamsapptester start",
     "dev": "nodemon --inspect=9239 --signal SIGINT ./src/index.js",
     "start": "node ./src/index.js",
     "watch": "nodemon ./src/index.js",
